--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+      /* Set site background image from public folder to avoid webpack resolving it */
+      body {
+        margin: 0;
+        background: #fefaf0 url('/bg.jpg') no-repeat center center fixed;
+        background-size: cover;
+      }
+    </style>
   <title>Velmurugan Stone Crushers - Aggregate Products</title>
   </head>
   <body>
